--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -21,7 +21,8 @@
         android:id="@+id/freshTab"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="4dp" />
+        android:visibility="gone"
+        mozac:awesomeBarChipBackgroundColor="#444444" />
 
     <com.cliqz.components.search.CliqzAwesomeBar
         android:id="@+id/awesomeBar"
