Home screen and last search flows (#18)
* Rough implementation of URLBar and Tabs native modules

* Freshtab interaction flow.

* Working on freshtab interactions.

* Implement last search

* Use latest extension builds.

* Improve last search

* Lazy load react native views when they are first shown.

* Placeholder freshtab.

* Implement SearchEnginesModule.

* Bundle react-native images.

* Remove unused attribute

* Use better supported visibility change API.

--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -17,6 +17,12 @@
         android:layout_height="match_parent"
         app:layout_behavior="mozilla.components.feature.session.behavior.EngineViewBottomBehavior" />
 
+    <com.cliqz.components.search.FreshTab
+        android:id="@+id/freshTab"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
     <com.cliqz.components.search.CliqzAwesomeBar
         android:id="@+id/awesomeBar"
         android:layout_width="match_parent"
